# piskvorky

./: .gitignore  LICENSE  README.md
client/: compile_ui.py  pyproject.toml
client/piskvorky_client/: __init__.py
client/piskvorky_client/ui/: main_window.py
client/ui/: login_dialog.ui
