[tool.poetry]
name = "piskvorky-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "piskvorky_client"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide2 = "^5.15.2.1"

[tool.poetry.scripts]
app = "piskvorky_client:main"
compile_ui = "compile_ui:compile_ui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
